--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".wellcome.WellComeActivity_"
-            android:theme="@style/ActivityWellComeTheme"
-            >
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".wellcome.WellComeActivity_"
+            android:theme="@style/ActivityWellComeTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
     </application>
 
 </manifest>
