--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,14 +25,24 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+    
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+
     compile 'com.romainpiel.shimmer:library:1.4.0@aar'                  //文字高亮扫描
+
     compile 'tyrantgit:explosionfield:1.0.1'                            //控件粉碎
+
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'      //圆形图片
+
     compile('com.mikepenz:materialdrawer:4.4.0@aar') {                  //开源侧滑菜单
         transitive = true
     }
+
+    compile 'com.mikepenz:crossfader:1.1.3@aar'
+    compile ('com.mikepenz:crossfadedrawerlayout:0.0.1-SNAPSHOT@aar')
+
+    compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'
 
 }
 
