--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".main.MainActivity"
+            android:name=".main.MainActivity_"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/Main_Style"
+            >
+
+        </activity>
         <activity
             android:name=".wellcome.WellComeActivity_"
             android:theme="@style/ActivityWellComeTheme">
