--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,13 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+}
+
 repositories {
     mavenCentral()
     mavenLocal()
