--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,11 @@ dependencies {
     compile ('com.mikepenz:crossfadedrawerlayout:0.0.1-SNAPSHOT@aar')   //图标库
 
     compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'             //图标库
-
     compile 'de.greenrobot:eventbus:2.4.0'                          //Event Bus
 
     compile 'com.tencent.bugly:crashreport:1.2.6'  //其中<version>替换为当前最新的Bugly SDK版本号
+
+    compile 'cn.pedant.sweetalert:library:1.3'      // Dialog特效
 }
 
 apt {
