--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     compile 'com.tencent.bugly:crashreport:1.2.6'  //其中<version>替换为当前最新的Bugly SDK版本号
 
     compile 'cn.pedant.sweetalert:library:1.3'      // Dialog特效
+
+    compile 'com.joanzapata.android:base-adapter-helper:1.1.10'    //万能适配器
+
+    compile 'com.ms-square:expandableTextView:0.1.4'        //可扩展的TextView
 }
 
 apt {
