基本的照片动态和照片动态查看照片效果 等待添加注释和代码优化～～～

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
     compile 'com.ms-square:expandableTextView:0.1.4'        //可扩展的TextView
 
     compile 'com.facebook.fresco:fresco:0.8.1+'            //fresco图片加载处理
+
+    compile 'org.apmem.tools:layouts:1.10@aar'          //自动换行容器控件
+
+    compile 'com.bm.photoview:library:1.3.4'            //图片预览功能
 }
 
 apt {
