--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.lvyerose.helpcommunity"
-        minSdkVersion 14
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,43 +26,44 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
-
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
-
-    compile 'com.romainpiel.shimmer:library:1.4.0@aar'                  //文字高亮扫描
-
-    compile 'tyrantgit:explosionfield:1.0.1'                            //控件粉碎
-
-    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'      //圆形图片
-
+    compile 'com.romainpiel.shimmer:library:1.4.0@aar'
+    //文字高亮扫描
+    compile 'tyrantgit:explosionfield:1.0.1'
+    //控件粉碎
+    compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    //圆形图片
     compile('com.mikepenz:materialdrawer:4.4.0@aar') {                  //开源侧滑菜单
         transitive = true
     }
-
-    compile 'com.mikepenz:crossfader:1.1.3@aar'                         //侧滑菜单样式更改
-    compile ('com.mikepenz:crossfadedrawerlayout:0.0.1-SNAPSHOT@aar')   //图标库
-
-    compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'             //图标库
-    compile 'de.greenrobot:eventbus:2.4.0'                          //Event Bus
-
-    compile 'com.tencent.bugly:crashreport:1.2.6'  //其中<version>替换为当前最新的Bugly SDK版本号
-
-    compile 'cn.pedant.sweetalert:library:1.3'      // Dialog特效
-
-    compile 'com.joanzapata.android:base-adapter-helper:1.1.10'    //万能适配器
-
-    compile 'com.ms-square:expandableTextView:0.1.4'        //可扩展的TextView
-
-    compile 'com.facebook.fresco:fresco:0.8.1+'            //fresco图片加载处理
-
-    compile 'com.squareup.okhttp:okhttp:2.5.0'             //网络请求 okHttp
-
-    compile 'org.apmem.tools:layouts:1.10@aar'          //自动换行容器控件
-
-    compile 'com.bm.photoview:library:1.3.4'            //图片预览功能
-
-    compile 'com.google.code.gson:gson:2.4'             //gson解析
+    compile 'com.mikepenz:crossfader:1.1.3@aar'
+    //侧滑菜单样式更改
+    compile 'com.mikepenz:crossfadedrawerlayout:0.0.1-SNAPSHOT@aar'
+    //图标库
+    compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'
+    //图标库
+    compile 'de.greenrobot:eventbus:2.4.0'
+    //Event Bus
+    compile 'com.tencent.bugly:crashreport:1.2.6'
+    //其中<version>替换为当前最新的Bugly SDK版本号
+    compile 'cn.pedant.sweetalert:library:1.3'
+    // Dialog特效
+    compile 'com.joanzapata.android:base-adapter-helper:1.1.10'
+    //万能适配器
+    compile 'com.ms-square:expandableTextView:0.1.4'
+    //可扩展的TextView
+    compile 'com.facebook.fresco:fresco:0.8.1+'
+    //fresco图片加载处理
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    //网络请求 okHttp
+    compile 'org.apmem.tools:layouts:1.10@aar'
+    //自动换行容器控件
+    compile 'com.bm.photoview:library:1.3.4'
+    //图片预览功能
+    compile 'com.google.code.gson:gson:2.4'
+    //gson解析
+    compile files('src/main/libs/okhttputils.jar')
 }
 
 apt {
