--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         <activity
             android:name=".main.MainActivity_"
             android:label="@string/app_name"
-            android:theme="@style/Main_Style"></activity>
+            android:theme="@style/Main_Style">
+
+        </activity>
         <activity
             android:name=".wellcome.WellComeActivity_"
             android:theme="@style/ActivityWellComeTheme">
@@ -33,8 +35,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity_">
-
+        <activity android:name=".login.LoginActivity_"
+            android:theme="@style/Login_Register_AppThem">
         </activity>
     </application>
 
