--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     //ViewPager滑动指示器
     compile 'com.flyco.pageindicator:FlycoPageIndicator_Lib:1.0.0@aar'
+    //底部选择框菜单
+    compile 'com.baoyz.actionsheet:library:1.1.1'
+
 }
 
 apt {
