--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".base.BaseApplication"
@@ -24,7 +26,6 @@
             android:name=".main.MainActivity_"
             android:label="@string/app_name"
             android:theme="@style/Main_Style" />
-
         <activity
             android:name=".wellcome.WellComeActivity_"
             android:theme="@style/ActivityWellComeTheme">
@@ -40,6 +41,11 @@
         <activity
             android:name=".login.RegisterActivity_"
             android:theme="@style/Login_Register_AppThem" />
+        <activity
+            android:name=".slidingmenu.me.MyMessageActivity_"
+            android:theme="@style/Theme.DesignDemo">
+        </activity>
+        <activity android:name=".widgets.cemare.CamareAndPhotoUtils"/>
     </application>
 
 </manifest>
