--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,12 +43,29 @@
             android:theme="@style/Login_Register_AppThem" />
         <activity
             android:name=".slidingmenu.me.MyMessageActivity_"
-            android:theme="@style/Theme.DesignDemo"></activity>
+            android:theme="@style/Theme.DesignDemo" />
         <activity android:name=".widgets.cemare.CamareAndPhotoUtils" />
         <activity
             android:name=".slidingmenu.me.EditMessageActivity_"
             android:label="@string/title_activity_edit_message"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".im.ConversationActivity_"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"
+            android:theme="@style/AppTheme.NoActionBar">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="com.lvyerose.helpcommunity"
+                    android:pathPrefix="/conversation/"
+                    android:scheme="rong" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
